Run dev server with webpack-cli

--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-cli serve --mode development"
   }
 }
