--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "es6",
+    "module": "es2015",
     "lib": [
       "dom",
-      "es2019"
+      "es2020"
     ],
     "sourceMap": true,
     "strict": true,
@@ -12,6 +12,6 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
-    "allowJs": true
+    "allowJs": false
   }
 }
